--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     
-<div class="main" data-color="#9198e5">
+<div class="main">
     <div class="clock">
         <div class="hour"></div>
         <div class="min"></div>
