--- a/index.html
+++ b/index.html
@@ -12,10 +12,17 @@
     
 <div class="main">
     <div class="clock">
+        <div class="fucksVideo">
+            <video id="fuckVideo">
+                <source id="mp4_src" src="fuckfuckfuck.mp4" type="video/mp4">
+            </video>
+        </div>
         <div class="hour"></div>
         <div class="min"></div>
         <div class="sec"></div>
         <div class="dot"></div>
+        <div class="fucks"></div>
+
         <div class="zerofucksgiven">Fuck it! You're late anyway.</div>
     </div>  
 </div>
