--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
 <div class="main">
     <div class="clock">
-        <div class="fucksVideo">
+        <div class="fucksVideo hide">
             <video id="fuckVideo">
                 <source id="mp4_src" src="fuckfuckfuck.mp4" type="video/mp4">
             </video>
